--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   cloud_firestore: ^0.13.4+2
   provider: ^3.1.0
   flutter_spinkit: ^4.1.2+1
+  intl: ^0.16.1
+  fluttertoast: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
