--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: App for sri lanka cricket
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,9 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   intl: ^0.16.1
   fluttertoast: ^4.0.1
+  table_calendar: ^2.2.1
+  shared_preferences: ^0.5.4+5
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
