--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   fluttertoast: ^4.0.1
   table_calendar: ^2.2.1
   shared_preferences: ^0.5.4+5
+  dropdown_formfield: ^0.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
