--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   table_calendar: ^2.2.1
   shared_preferences: ^0.5.4+5
   dropdown_formfield: ^0.1.2
-
+  flutter_rating_bar: ^3.0.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
